@@ -265,7 +265,7 @@
 					<forkMode>once</forkMode>
 					<parallel>methods</parallel>
 					<threadCount>4</threadCount>
-					<!-- <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine> -->
+					<!-- <argLine>-Xmx1024m -XX:MetaSpaceSize=256m -XX:MaxMetaspaceSize=256m</argLine> -->
  					<argLine>-Dfile.encoding=UTF-8</argLine> 
  					<excludes>  
 	                  <exclude>**/TestAll.java</exclude>  
